@@ -255,7 +255,7 @@ void BX_CPU_C::init_v8086_mode(void)
 
   handleCpuModeChange();
 
-#if BX_CPU_LEVEL >= 4 && BX_SUPPORT_ALIGNMENT_CHECK
+#if BX_CPU_LEVEL >= 4
   handleAlignmentCheck(/* CPL change */);
 #endif
 
